--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     :root{
       --bg: #0f1220;
-      --card: #141833;
+      --card: #192ca8;
       --muted: #98a2b3;
       --text: #e6e7ee;
       --accent: #9b87f5; /* лавандовий */
